--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     </div>
     <div class="pic1-pic2">
         <div class="pic1">
-            <img src="accessories/dish1.avif" alt="" class="img">
+            <img src="accessories/dish1.avif" alt="" class="img" width=100%>
             <div class="order">
                 <span class="text1">Order Online</span>
                 <span class="text2">Stay home and order to your doorstep</span>
             </div>
         </div>
         <div class="pic2">
-            <img src="accessories/dish2.avif" alt="" class="img">
+            <img src="accessories/dish2.avif" alt="" class="img" width=100%>
             <div class="order">
                 <span class="text1">Dining</span>
                 <span class="text2">View the city's favourite dining venues</span>
